application de style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Debuter avec git</title>
+	<style type="text/css">
+		h2{
+			color: green;
+		}
+	</style>
 </head>
 <body>
 	<h2>Bonjour tout le monde</h2>
