--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 		h2{
 			color: red;
 		}
+		h3{
+			color: orange;
+		}
 	</style>
 </head>
 <body>
 	<h2>Bonjour tout le monde</h2>
+	<h3>Bienvenue au Bootcamp Bouake</h3>
 </body>
 </html>
